# NEUChat-wasm

./: .env.development  index.html  package.json  tsconfig.json  vite.config.ts
neu_chat_server/: .gitignore  Cargo.toml
neu_chat_server/src/: entity.rs  jwt.rs  main.rs  redis_db.rs  server.rs  session.rs
src/: App.vue  env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  main.rs
src/common/: Api.ts  Constants.ts  Request.ts  WindowEvent.ts
src/router/: index.ts
src/script/: BlockController.ts  ChatController.ts
src/view/: ChatView.vue  GameView.vue  Login.vue  Register.vue
