[package]
name = "neu_chat_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.0"
actix-web = "4"
actix-web-actors = "4.2.0"

jsonwebtoken = "8.3.0"
serde = "1.0.163"
serde_json = "1.0.96"
futures = "0.3.28"

redis = "0.23.0"
uuid = {version = "1.3.3", features = ["serde", "v4"]}
magic-crypt = "3.1.12"
unicode-segmentation = "1.10.1"
ring = "0.17.0-alpha.11"
